<resources>
    <string name="app_name">UliGra Shop</string>
    <string name="app_web">www.uligra.com</string>

    <string name="nd_home">Home</string>
    <string name="nd_ofer">Ofertas</string>
    <string name="nd_ps4">PS4</string>
    <string name="nd_xbox">XBox</string>
    <string name="nd_new">Novedades</string>
    <string name="nd_shop">Carro de la compra</string>

    <string name="nd_where">¿Dónde estamos?</string>
    <string name="nd_contact">Contacto</string>
    <string name="correo">contacto@uligra.com</string>

    <string name="nd_supportTitle">Soporte</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>