<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/nd_home"
            />
        <item
            android:id="@+id/navigation_ofer"
            android:icon="@drawable/outline_local_offer_24"
            android:title="@string/nd_ofer"
            />
        <item
            android:id="@+id/navigation_ps4"
            android:icon="@drawable/outline_videogame_asset_24"
            android:title="@string/nd_ps4"
            />
        <item
            android:id="@+id/navigation_xbox"
            android:icon="@drawable/outline_videogame_asset_24"
            android:title="@string/nd_xbox"
            />
        <item
            android:id="@+id/navigation_new"
            android:icon="@drawable/outline_trending_up_24"
            android:title="@string/nd_new"
            />
        <item
            android:id="@+id/navigation_shop"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/nd_shop"
            />
    </group>
    <item android:title="@string/nd_supportTitle">
        <menu>
            <item
                android:id="@+id/navigation_contact"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nd_contact"
                />
            <item
                android:id="@+id/navigation_where"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nd_where"
                />
        </menu>
    </item>

</menu>